2014-02-02  Kaz Kylheku  <kaz@kylheku.com>

	append can now take additional leading arguments before the list.

	* eval.c (apply_frob_args): New static function.
	(apply_intrinsic): Process arguments with apply_frob_args.
	(eval_init): apply_intrinsic registered differently, as a
	variadic function with one mandatory arg.

	* lib.c (lastcons): New function.

	* lib.h (lastcons): Declared.

	* txr.1: Updated append documentation.

2014-02-02  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (apply): Support string and vector arglist.
	(do_eval_args): Support string or vector in dot position.

	* lib.c (tolist): New function.

	* lib.h (tolist): Declared.

	* txr.1: Document how apply and dot position in compound forms
	supports strings as well as vectors.

2014-02-02  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (do_eval_args): If the dotted position of the argument
	list evaluates to a vector, then convert the vector to a list.

	* txr.1: Document compound forms, and how they allow the dotted
	position and how it may be a vector.

2014-02-02  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Register vector_list function a second time
	under the name vec, as a variadic function.

	* txr.1: Document vec.

2014-02-01  Kaz Kylheku  <kaz@kylheku.com>

	* hash.c (hash_mark, hash_grow, make_similar_hash,
	copy_hash, gethash_l, gethash, gethash_f, gethash_n, 
	hash_count, hash_next, hash_eql, hash_equal): Use
	num_fast instead of num.
	(make_hash): An attempt to make a weak-keys hash that has
	equal-based keys is nonsensical; it is now diagnosed with
	an exception. Use num_fast instead of num.
	(hash_process_weak): Call breakpt whenever the weak object(s) due to
	which entries are being deleted match the value in break_obj.
	Use num_fast instead of num.

	* parser.l (parse_init): Bugfix: the forms_to_ln_hash
	was equal-based, which makes no sense.

2014-02-01  Kaz Kylheku  <kaz@kylheku.com>

	Export break_obj.

	* gc.c (break_obj): Change to external linkage.